--- a/gitstats/activity.html
+++ b/gitstats/activity.html
@@ -47,6 +47,9 @@
         </h2>
         <ul>
           <li>
+            <a href='#lastweeks'>Last years weeks</a>
+          </li>
+          <li>
             <a href='#hour_of_day'>Hour of day</a>
           </li>
           <li>
@@ -65,6 +68,15 @@
             <a href='#commits_per_yearmonth'>Commits per year and month</a>
           </li>
         </ul>
+      </div>
+      <h2 class='blockheader'>
+        <a name='lastweeks'>Last years weeks</a>
+      </h2>
+      
+      <div id="block-lastweeks" class="blockcontainer">
+      <div class='blockdiagram'>
+        <img src='lastweeks.png' />
+      </div>
       </div>
       <h2 class='blockheader'>
         <a name='hour_of_day'>Hour of day</a>
@@ -123,6 +135,10 @@
           <tbody>
             <tr>
               <th>Mon</th>
+              <td class='gradient-20'>1</td>
+              <td class='gradient-60'>3</td>
+              <td class='gradient-40'>2</td>
+              <td class='gradient-80'>4</td>
               <td></td>
               <td></td>
               <td></td>
@@ -132,19 +148,15 @@
               <td></td>
               <td></td>
               <td></td>
+              <td class='gradient-20'>1</td>
+              <td class='gradient-20'>1</td>
               <td></td>
+              <td class='gradient-100'>5</td>
               <td></td>
+              <td class='gradient-100'>5</td>
               <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td class='gradient-40'>2</td>
+              <td class='gradient-60'>3</td>
               <td></td>
               <td></td>
             </tr>
@@ -246,10 +258,10 @@
               <td></td>
               <td></td>
               <td></td>
-              <td class='gradient-25'>1</td>
+              <td class='gradient-20'>1</td>
               <td></td>
               <td></td>
-              <td class='gradient-25'>1</td>
+              <td class='gradient-20'>1</td>
               <td></td>
               <td></td>
               <td></td>
@@ -258,7 +270,7 @@
             </tr>
             <tr>
               <th>Sat</th>
-              <td class='gradient-75'>3</td>
+              <td class='gradient-60'>3</td>
               <td></td>
               <td></td>
               <td></td>
@@ -268,19 +280,19 @@
               <td></td>
               <td></td>
               <td></td>
-              <td class='gradient-25'>1</td>
+              <td class='gradient-20'>1</td>
               <td></td>
-              <td class='gradient-25'>1</td>
-              <td class='gradient-50'>2</td>
-              <td class='gradient-50'>2</td>
+              <td class='gradient-20'>1</td>
+              <td class='gradient-40'>2</td>
+              <td class='gradient-40'>2</td>
               <td></td>
-              <td class='gradient-25'>1</td>
-              <td class='gradient-25'>1</td>
-              <td class='gradient-50'>2</td>
+              <td class='gradient-20'>1</td>
+              <td class='gradient-20'>1</td>
+              <td class='gradient-40'>2</td>
               <td></td>
               <td></td>
               <td></td>
-              <td class='gradient-75'>3</td>
+              <td class='gradient-60'>3</td>
               <td></td>
             </tr>
             <tr>
@@ -297,18 +309,18 @@
               <td></td>
               <td></td>
               <td></td>
-              <td class='gradient-25'>1</td>
-              <td class='gradient-50'>2</td>
-              <td class='gradient-25'>1</td>
-              <td class='gradient-50'>2</td>
-              <td class='gradient-25'>1</td>
+              <td class='gradient-20'>1</td>
+              <td class='gradient-40'>2</td>
+              <td class='gradient-20'>1</td>
+              <td class='gradient-40'>2</td>
+              <td class='gradient-20'>1</td>
               <td></td>
-              <td class='gradient-50'>2</td>
-              <td class='gradient-50'>2</td>
-              <td class='gradient-100'>4</td>
-              <td class='gradient-50'>2</td>
+              <td class='gradient-40'>2</td>
+              <td class='gradient-40'>2</td>
+              <td class='gradient-80'>4</td>
+              <td class='gradient-40'>2</td>
               <td></td>
-              <td></td>
+              <td class='gradient-80'>4</td>
             </tr>
           </tbody>
         </table>
@@ -345,11 +357,11 @@
           <tbody>
             <tr>
               <td>2011</td>
-              <td>35</td>
-              <td>48</td>
-              <td>1</td>
-              <td>2485</td>
-              <td>1116</td>
+              <td>66</td>
+              <td>76</td>
+              <td>12</td>
+              <td>4992</td>
+              <td>2568</td>
             </tr>
           </tbody>
         </table>
@@ -386,11 +398,11 @@
           <tbody>
             <tr>
               <td>11</td>
-              <td>35</td>
-              <td>48</td>
-              <td>1</td>
-              <td>2485</td>
-              <td>1116</td>
+              <td>66</td>
+              <td>76</td>
+              <td>12</td>
+              <td>4992</td>
+              <td>2568</td>
             </tr>
           </tbody>
         </table>
@@ -427,11 +439,11 @@
           <tbody>
             <tr>
               <td>2011-11</td>
-              <td>35</td>
-              <td>48</td>
-              <td>1</td>
-              <td>2485</td>
-              <td>1116</td>
+              <td>66</td>
+              <td>76</td>
+              <td>12</td>
+              <td>4992</td>
+              <td>2568</td>
             </tr>
           </tbody>
         </table>
