--- a/gitstats/authors.html
+++ b/gitstats/authors.html
@@ -86,15 +86,15 @@
           </thead>
           <tbody>
             <tr>
-              <td>Christoph Plank &lt;chrisistuff@gmail.com&gt;</td>
-              <td>35</td>
+              <td>Christoph Plank</td>
+              <td>66</td>
               <td>100.00%</td>
-              <td>48</td>
-              <td>1</td>
-              <td>2485</td>
-              <td>1116</td>
+              <td>76</td>
+              <td>12</td>
+              <td>4992</td>
+              <td>2568</td>
               <td>2011-11-03</td>
-              <td>2011-11-05</td>
+              <td>2011-11-06</td>
             </tr>
           </tbody>
         </table>
@@ -116,8 +116,8 @@
           <tbody>
             <tr class='top'>
               <td class='yearauthor_top1'>2011</td>
-              <td class='yearauthor_top1'>Christoph Plank &lt;chrisistuff@gmail.com&gt;</td>
-              <td class='yearauthor_top1'>35 of 35 (100.00%)</td>
+              <td class='yearauthor_top1'>Christoph Plank</td>
+              <td class='yearauthor_top1'>66 of 66 (100.00%)</td>
               <td class='yearauthor_top1'>1</td>
             </tr>
           </tbody>
@@ -151,8 +151,8 @@
           <tbody>
             <tr class='top'>
               <td class='yearmonthauthor_top1'>2011-11</td>
-              <td class='yearmonthauthor_top1'>Christoph Plank &lt;chrisistuff@gmail.com&gt;</td>
-              <td class='yearmonthauthor_top1'>35 of 35 (100.00%)</td>
+              <td class='yearmonthauthor_top1'>Christoph Plank</td>
+              <td class='yearmonthauthor_top1'>66 of 66 (100.00%)</td>
               <td class='yearmonthauthor_top1'>1</td>
             </tr>
           </tbody>
