--- a/gitstats-ruby/files.html
+++ b/gitstats-ruby/files.html
@@ -6,12 +6,24 @@
       Statistics
     </title>
     <link href='style.css' rel='stylesheet' type='text/css' />
+    <meta content='text/html; charset=UTF-8' http-equiv='content-type' />
     <script src='jquery.js' type='text/javascript'></script>
     <script src='jquery.tablesorter.js' type='text/javascript'></script>
   </head>
   <body>
     <script type='text/javascript'>
       //<![CDATA[
+        $.tablesorter.addParser({
+          id: 'size',
+          is: function(s) {
+              return false;
+          },
+          format: function(s) {
+              return $.tablesorter.formatFloat(s.replace(/k/,'000').replace(/M/,'000000').replace(/G/,'000000000'));
+          },
+          type: 'numeric'
+        });
+        
         $(document).ready(function() {
           $(".toggleable").hide();
           $(".toggle").click(function() {
@@ -78,7 +90,12 @@
       <script type='text/javascript'>
         //<![CDATA[
           $(document).ready(function() {
-            $("#filetypes_table").tablesorter({sortList: [[0, 0]]});
+            $("#filetypes_table").tablesorter({
+              sortList: [[1, 1]],
+              headers: {
+                2: { sorter: 'size' }
+              }
+            });
           });
         //]]>
       </script>
@@ -100,12 +117,12 @@
             <tr>
               <td></td>
               <td>3</td>
-              <td>38860</td>
+              <td>39k</td>
             </tr>
             <tr>
               <td>.js</td>
               <td>2</td>
-              <td>110540</td>
+              <td>110k</td>
             </tr>
             <tr>
               <td>.gif</td>
@@ -120,17 +137,17 @@
             <tr>
               <td>.plot</td>
               <td>10</td>
-              <td>3427</td>
+              <td>3k</td>
             </tr>
             <tr>
               <td>.haml</td>
               <td>25</td>
-              <td>10765</td>
+              <td>13k</td>
             </tr>
             <tr>
               <td>.rb</td>
-              <td>18</td>
-              <td>19179</td>
+              <td>19</td>
+              <td>20k</td>
             </tr>
             <tr>
               <td>.gemspec</td>
@@ -140,7 +157,7 @@
             <tr>
               <td>.scss</td>
               <td>1</td>
-              <td>1918</td>
+              <td>1k</td>
             </tr>
           </tbody>
         </table>
