--- a/gitstats-ruby/lines.html
+++ b/gitstats-ruby/lines.html
@@ -6,12 +6,24 @@
       Statistics
     </title>
     <link href='style.css' rel='stylesheet' type='text/css' />
+    <meta content='text/html; charset=UTF-8' http-equiv='content-type' />
     <script src='jquery.js' type='text/javascript'></script>
     <script src='jquery.tablesorter.js' type='text/javascript'></script>
   </head>
   <body>
     <script type='text/javascript'>
       //<![CDATA[
+        $.tablesorter.addParser({
+          id: 'size',
+          is: function(s) {
+              return false;
+          },
+          format: function(s) {
+              return $.tablesorter.formatFloat(s.replace(/k/,'000').replace(/M/,'000000').replace(/G/,'000000000'));
+          },
+          type: 'numeric'
+        });
+        
         $(document).ready(function() {
           $(".toggleable").hide();
           $(".toggle").click(function() {
